<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ExplanationPermissions"
    android:id="@+id/lay_expl_perm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txtIntroduzione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_introduction"
            android:textColor="@color/blu_botton"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSpiegazione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_explanation_app"
            android:textColor="@color/blu_botton"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSpiegazionePermessi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_explanation_permission"
            android:textColor="@color/blu_botton"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight=".30"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight=".70"
                android:text="@string/text_explanation_permission_gps"
                android:textColor="@color/blu_botton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight=".30"
                app:srcCompat="@drawable/ic_contact_phone_black_24dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight=".70"
                android:text="@string/text_explanation_permission_contacts"
                android:textColor="@color/blu_botton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight=".30"
                app:srcCompat="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight=".70"
                android:text="@string/text_explanation_permission_network"
                android:textColor="@color/blu_botton" />
        </LinearLayout>

        <LinearLayout
        android:id="@+id/ll_popup_expl_perm_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.30"
            app:srcCompat="@drawable/activity" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:text="@string/text_explanation_permission_acttivity_v29"
            android:textColor="@color/blu_botton" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/text_explanation_conclusion"
            android:textColor="@color/blu_botton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_popup_expl_perm_ok"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"

                android:layout_marginBottom="50dp"
                android:background="@drawable/blue_button_2"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="@color/white_botton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>