<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.swapuniba.crowdpulse.main.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:orientation="vertical">


        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

            <ProgressBar
                android:id="@+id/progressLogin"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingTop="0dp"
            android:paddingEnd="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_password"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="@dimen/default_padding"
            android:paddingBottom="0dp"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding" />

            <Button
                android:layout_height="match_parent"
                android:id="@+id/button_show_password"
                android:gravity="center"
                android:background="@android:drawable/ic_menu_view"
                android:layout_width="60px"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/small_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/phonenumber" />

        <EditText
            android:id="@+id/editText_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/phonenumber_hint"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="0dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_button_2"
            android:padding="@dimen/default_padding"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:translationZ="10dp" />

    </LinearLayout>
</ScrollView>
